--- a/main.html
+++ b/main.html
@@ -13,15 +13,15 @@
         <table class="center">
           <tr>
             <td><label for="name">Name</label></td>
-            <td><input type="text" id="name" name="name" /></td>
+            <td><input type="text" id="name" name="name" placeholder="Shubham Jain" /></td>
           </tr>
           <tr>
             <td><label for="Phone">Phone Number</label></td>
-            <td><input type="text" id="phone" name="phone" /></td>
+            <td><input type="text" id="phone" name="phone" placeholder="123-456-7890"/></td>
           </tr>
           <tr>
-            <td><label for="address">Address</label></td>
-            <td><input type="text" id="address" name="address" /></td>
+            <td><label for="address" >Address</label></td>
+            <td><input type="text" id="address" name="address" placeholder="Address" /></td>
           </tr>
           <tr>
             <td>
@@ -34,11 +34,8 @@
                 type="checkbox"
                 id="checkbox"
                 name="checkbox"
-                value="Yes"
+                value="Have you ever lived with a Dog before?"
               />
-              Yes &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-              <input type="checkbox" id="checkbox" name="checkbox" value="No" />
-              No
             </td>
           </tr>
           <tr>
