--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
         <table class="center">
           <tr>
             <td><label for="name">Name</label></td>
-            <td><input type="text" id="name" name="name" placeholder="Shubham Jain" /></td>
+            <td><input type="text" id="name" name="name" placeholder="Name" /></td>
           </tr>
           <tr>
             <td><label for="Phone">Phone Number</label></td>
-            <td><input type="text" id="phone" name="phone" placeholder="123-456-7890"/></td>
+            <td><input type="text" id="phone" name="phone" placeholder="Phone Number"/></td>
           </tr>
           <tr>
             <td><label for="address" >Address</label></td>
@@ -67,7 +67,7 @@
             </td>
           </tr>
           <tr>
-            <td style="text-align: center;" colspan="2"><input type="submit" value="Submit" /></td>
+            <td style="text-align: center;" colspan="2"><input type="submit" value="Submit" id="submit"/></td>
           </tr>
         </table>
       </form>
